--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
 
       const jsonString = JSON.stringify(jsonData);
       console.log(jsonString);
-      fetch('/convert', {
+      fetch('/docconvert/convert', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
